--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "colyseus-distributed-matchmaker",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "start": "NODE_ENV='development' nodemon --watch './src/**/*.ts' --exec ts-node ./src/index.ts",
     "build": "tsc -p tsconfig.json",
@@ -23,5 +23,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.17"
   },
-  "bin": "build/index.js"
+  "bin": "./cli.js"
 }
